--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <div class="thank-you-message hidden" id="thankYouMsg" data-aos="fade-down" data-aos-delay="400">
   <h1 class="brand-name">NEAT</h1>
-  <p class="drop-date">One Of Nun : July 15, 2025</p>
-  <p class="attractive-text">Get ready for the freshest drop to elevate your style and turn heads everywhere.</p>
+  <p class="drop-date">One Of Nun : June 27, 2025</p>
+  <p class="attractive-text">You’re now on Neat’s inner circle. First to know. First to flex.</p>
   <p class="see-you">See You In The Inside</p>
 </div>
 
