Neat Subscribe btn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <input type="email" id="email" name="email" required placeholder=" " />
         <label for="email">Your Email</label>
       </div>
-      <button type="submit" class="subscribe-btn">Subscribe</button>
+      <button type="submit" class="subscribe-btn">Access the Neat Drop</button>
     </form>
 
   </div>
