--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <div class="thank-you-message hidden" id="thankYouMsg" data-aos="fade-down" data-aos-delay="400">
   <h1 class="brand-name">NEAT</h1>
-  <p class="drop-date">One Of Nun : June 27, 2025</p>
+  <p class="drop-date">001 Of Nun : June 24, 2025</p>
   <p class="attractive-text">You’re now on Neat’s inner circle. First to know. First to flex.</p>
   <p class="see-you">See You In The Inside</p>
 </div>
