sitemap and SEO stuff

--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Neatgarms is a premium clothing brand offering modern streetwear, everyday essentials, and timeless fashion for confident expression.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Neat Subscription</title>
   <link rel="stylesheet" href="styles.min.css" />
     <link rel="preload" as="video" href="images/WhatsApp Video 2025-05-17 at 10.12.32_eb9103df.mp4" type="video/mp4">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Dream+Avenue&family=Poppins&display=swap" rel="stylesheet" />
+<link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+<link rel="shortcut icon" href="/images/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+<link rel="manifest" href="site.webmanifest" />
+<link rel="canonical" href="https://neatgarms.com/" />
+
+
+<!-- Open Graph (for Facebook, WhatsApp, LinkedIn) -->
+<meta property="og:title" content="Neatgarms" />
+<meta property="og:description" content="Shop stylish fashion and streetwear made for comfort and confidence." />
+<meta property="og:image" content="https://neatgarms.com/images/lp12(main).webp" />
+<meta property="og:url" content="https://neatgarms.com/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Neatgarms — Premium Urban Wear" />
+<meta name="twitter:description" content="Explore our modern streetwear collections and elevate your look." />
+<meta name="twitter:image" content="https://neatgarms.com/images/og-cover.jpg" />
+
+
 </head>
 <body>
   <!-- Background Video -->
