--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Neatgarms is a premium clothing brand offering modern streetwear, everyday essentials, and timeless fashion for confident expression.">
+  <meta property="og:site_name" content="Neatgarms">
+<meta name="description"
+      content="Discover Neatgarms — modern streetwear, everyday essentials and limited drops designed for confident self‑expression. Shipping worldwide from Kenya.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Neat Subscription</title>
+  <title>Neatgarms</title>
   <link rel="stylesheet" href="styles.min.css" />
-    <link rel="preload" as="video" href="images/WhatsApp Video 2025-05-17 at 10.12.32_eb9103df.mp4" type="video/mp4">
+  <link rel="preload" as="video" href="images/WhatsApp Video 2025-05-17 at 10.12.32_eb9103df.mp4" type="video/mp4">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Dream+Avenue&family=Poppins&display=swap" rel="stylesheet" />
-<link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
-<link rel="shortcut icon" href="/images/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 <link rel="manifest" href="site.webmanifest" />
 <link rel="canonical" href="https://neatgarms.com/" />
 
@@ -96,6 +98,18 @@
 });
 
 </script>
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Neatgarms",
+  "url": "https://neatgarms.com",
+  "logo": "https://neatgarms.com/images/favicon.ico"
+}
+</script>
+
 
 </body>
 </html>
