--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Neatgarms</title>
   <link rel="stylesheet" href="styles.min.css" />
-  <link rel="preload" as="video" href="images/WhatsApp Video 2025-05-17 at 10.12.32_eb9103df.mp4" type="video/mp4">
+  <link rel="preload" as="video" href="images/whatsapp-video-2025-05-17-at-101232-eb9103df_nG0tfoU8.mp4" type="video/mp4">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Dream+Avenue&family=Poppins&display=swap" rel="stylesheet" />
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -37,7 +37,7 @@
 <body>
   <!-- Background Video -->
   <video autoplay muted loop id="bgVideo" playsinline>
-    <source src="images/WhatsApp Video 2025-05-17 at 10.12.32_eb9103df.mp4" type="video/mp4" />
+    <source src="images/whatsapp-video-2025-05-17-at-101232-eb9103df_nG0tfoU8.mp4" type="video/mp4" />
     <!-- Add fallback text or alternative sources if needed -->
   </video>
 
