--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
 
-  <script type="module" src="scripts.min.js"></script>
+  <script type="module" src="scripts.min.js" defer></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script>
