--- a/index.html
+++ b/index.html
@@ -10,29 +10,48 @@
   <link rel="stylesheet" href="styles.min.css" />
   <link rel="preload" as="video" href="images/whatsapp-video-2025-05-17-at-101232-eb9103df_nG0tfoU8.mp4" type="video/mp4">
   <!-- Google Fonts -->
+   <link rel="canonical" href="https://neatgarms.com/" />
+
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Dream+Avenue&family=Poppins&display=swap" rel="stylesheet" />
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="site.webmanifest" />
-<link rel="canonical" href="https://neatgarms.com/" />
 
 
-<!-- Open Graph (for Facebook, WhatsApp, LinkedIn) -->
-<meta property="og:title" content="Neatgarms" />
-<meta property="og:description" content="Shop stylish fashion and streetwear made for comfort and confidence." />
-<meta property="og:image" content="https://neatgarms.com/images/lp12(main).webp" />
-<meta property="og:url" content="https://neatgarms.com/" />
-<meta property="og:type" content="website" />
-
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Neatgarms — Premium Urban Wear" />
-<meta name="twitter:description" content="Explore our modern streetwear collections and elevate your look." />
-<meta name="twitter:image" content="https://neatgarms.com/images/og-cover.jpg" />
+  <!-- Favicon / icons -->
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
 
 
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="Neatgarms">
+  <meta property="og:title" content="Neatgarms">
+  <meta property="og:description" content="Shop stylish fashion and streetwear made for comfort and confidence.">
+  <meta property="og:image" content="https://neatgarms.com/images/og-cover.jpg">
+  <meta property="og:url" content="https://neatgarms.com/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Neatgarms — Premium Urban Wear">
+  <meta name="twitter:description" content="Explore our modern streetwear collections and elevate your look.">
+  <meta name="twitter:image" content="https://neatgarms.com/images/og-cover.jpg">
+
+
+  <!-- Organization structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Neatgarms",
+    "url": "https://neatgarms.com",
+    "logo": "https://neatgarms.com/images/logo2.png",
+    "description": "Neatgarms is a premium clothing brand delivering timeless style, modern comfort and authentic expression.",
+    "sameAs": [
+      "https://www.instagram.com/neatgarms"
+    ]
+  }
+  </script>
 </head>
 <body>
   <!-- Background Video -->
@@ -100,15 +119,7 @@
 </script>
 
 
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "Neatgarms",
-  "url": "https://neatgarms.com",
-  "logo": "https://neatgarms.com/images/favicon.ico"
-}
-</script>
+
 
 
 </body>
