--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
       <img src="images/logo2.png" alt="Neat Logo" />
     </div>
 
-    <h2>Join the Neat List</h2>
-    <p>Get early access now!</p>
+    <h2>Snooze you lose</h2>
+    <p>NEAT VIP</p>
 
     <form id="subscribeForm">
       <div class="input-group">
         <input type="email" id="email" name="email" required placeholder=" " />
         <label for="email">Your Email</label>
       </div>
-      <button type="submit" class="subscribe-btn">Access the Neat Drop</button>
+      <button type="submit" class="subscribe-btn">Keep It Neat</button>
     </form>
 
   </div>
