--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   preload="auto"      
   id="bgVideo"
 >
-  <source src="images/whatsapp-video-2025-05-17-at-101232-eb9103df_nG0tfoU8.mp4" type="video/mp4">
+  <source src="images/WhatsApp Video 2025-05-17 at 10.12.32_eb9103df.mp4" type="video/mp4">
 </video>
 
 
@@ -113,20 +113,6 @@
     once: false,    // Animation will run every time you scroll
   });
 </script>
-
-<script>
-    window.addEventListener('load', () => {
-  const bgMusic = document.getElementById('bgMusic');
-  bgMusic.play().catch(() => {
-    // Autoplay might be blocked by browser if not muted or user interaction
-    console.log('Autoplay prevented by browser');
-  });
-});
-
-</script>
-
-
-
 
 
 </body>
