--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="Discover Neatgarms — modern streetwear, everyday essentials and limited drops designed for confident self‑expression. Shipping worldwide from Kenya.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Neatgarms</title>
-  <link rel="stylesheet" href="styles.min.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="preload" as="video" href="images/whatsapp-video-2025-05-17-at-101232-eb9103df_nG0tfoU8.mp4" type="video/mp4">
   <!-- Google Fonts -->
    <link rel="canonical" href="https://neatgarms.com/" />
@@ -63,7 +63,8 @@
   preload="auto"      
   id="bgVideo"
 >
-  <source src="images/bgvid2.mp4" type="video/mp4">
+  <source src="images/0404.webm" type="video/mp4">
+   Your browser does not support the video tag.
 </video>
 
 
