--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="Discover Neatgarms — modern streetwear, everyday essentials and limited drops designed for confident self‑expression. Shipping worldwide from Kenya.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Neatgarms</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.min.css" />
   <link rel="preload" as="video" href="images/whatsapp-video-2025-05-17-at-101232-eb9103df_nG0tfoU8.mp4" type="video/mp4">
   <!-- Google Fonts -->
    <link rel="canonical" href="https://neatgarms.com/" />
@@ -54,17 +54,19 @@
 </head>
 <body>
 
-<!-- Put this as high in <body> as possible -->
-<video id="bgVideo"
-       autoplay muted loop
-       playsinline webkit-playsinline
-       preload="auto"
-       poster="images/fallback.jpg">     <!-- still frame while loading -->
-  <source src="images/rihana.jpg" type="video/mp4">
-  <!-- <source src="images/bgvid.webm" type="video/webm">  (optional extra codec) -->
-  <!-- If the browser understands neither source, it will skip the video element -->
+<video
+  autoplay
+  muted
+  loop
+  playsinline
+  webkit-playsinline   
+  preload="auto"      
+  id="bgVideo"
+>
+  <source src="images/bgvid.mp4" type="video/mp4">
+    <img src="images/lp15m.webp"
+       alt="Background image (video not supported)">
 </video>
-
 
 
 <!-- Subscription Popup -->
@@ -112,32 +114,6 @@
     duration: 1200, // Animation duration
     once: false,    // Animation will run every time you scroll
   });
-</script>
-
-
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  const video = document.getElementById('bgVideo');
-  if (!video) return;
-
-  const giveUp = () => {
-    /* Could also do: video.style.display = 'none'; */
-    video.remove();
-  };
-
-  /* Try to autoplay */
-  const playAttempt = video.play?.();
-  if (playAttempt !== undefined) {
-    playAttempt
-      .then(() => document.body.classList.add('video-ok'))   // success 🎉
-      .catch(giveUp);                                        // blocked 🚫
-  } else {
-    giveUp();                                                // no .play() support
-  }
-
-  /* Hard failure (e.g., codec not supported) */
-  video.addEventListener('error', giveUp, { once: true });
-});
 </script>
 
 
