--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <video id="bgVideo"
        autoplay muted loop playsinline webkit-playsinline
        preload="auto"
-       >          <!-- use JPG/PNG -->
+       poster="images/lp12(main).jpg">          <!-- use JPG/PNG -->
   <source src="images/bgvid.mp4" type="video/mp4">
   <img src="images/lp12(main).jpg"
        alt="Background image (video unsupported)">
