--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="Discover Neatgarms — modern streetwear, everyday essentials and limited drops designed for confident self‑expression. Shipping worldwide from Kenya.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Neatgarms</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.min.css" />
   <link rel="preload" as="video" href="images/whatsapp-video-2025-05-17-at-101232-eb9103df_nG0tfoU8.mp4" type="video/mp4">
   <!-- Google Fonts -->
    <link rel="canonical" href="https://neatgarms.com/" />
@@ -54,14 +54,18 @@
 </head>
 <body>
 
-<video id="bgVideo"
-       autoplay muted loop playsinline webkit-playsinline
-       preload="auto"
-       poster="images/lp12(main).jpg">          <!-- use JPG/PNG -->
-  <source src="images/bgvid.mp4" type="video/mp4">
-  <img src="images/lp12(main).jpg"
-       alt="Background image (video unsupported)">
+<video
+  autoplay
+  muted
+  loop
+  playsinline
+  webkit-playsinline   
+  preload="auto"      
+  id="bgVideo"
+>
+  <source src="images/bgvid2.mp4" type="video/mp4">
 </video>
+
 
 <!-- Subscription Popup -->
 <div class="overlay" id="subscriptionPopup" >
@@ -111,24 +115,7 @@
 </script>
 
 
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  const video = document.getElementById('bgVideo');
-  if (!video) return;
 
-  const showImage = () => document.body.classList.remove('video-ok');
-
-  video.addEventListener('playing', () =>
-    document.body.classList.add('video-ok'), { once:true });
-
-  video.addEventListener('error', showImage, { once:true });
-
-  (video.play?.() || Promise.reject()).catch(showImage);
-
-  /* Slow‑network timeout */
-  setTimeout(() => { if (video.currentTime === 0) showImage(); }, 4000);
-});
-</script>
 
 </body>
 </html>
