--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Neatgarms</title>
   <link rel="stylesheet" href="styles.min.css" />
-  <link rel="preload" as="video" href="images/whatsapp-video-2025-05-17-at-101232-eb9103df_nG0tfoU8.mp4" type="video/mp4">
+  <link rel="preload" as="video" href="images/1.mp4" type="video/mp4">
   <!-- Google Fonts -->
    <link rel="canonical" href="https://neatgarms.com/" />
 
@@ -20,7 +20,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
- <link rel="manifest" href="/site.webmanifest?v=2">
+ <link rel="manifest" href="/site.webmanifest?v=3">
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Neatgarms">
@@ -39,18 +39,40 @@
 
   <!-- Organization structured data -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Neatgarms",
+  "url": "https://neatgarms.com",
+  "publisher": {
     "@type": "Organization",
     "name": "Neatgarms",
-    "url": "https://neatgarms.com",
-    "logo": "https://neatgarms.com/images/logo2.png",
-    "description": "Neatgarms is a premium clothing brand delivering timeless style, modern comfort and authentic expression.",
-    "sameAs": [
-      "https://www.instagram.com/neatgarms"
-    ]
-  }
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://neatgarms.com/logo.png"
+    }
+  },
+  "sameAs": [
+    "https://www.instagram.com/neatgarms"
+  ]
+}
   </script>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Neatgarms",
+  "url": "https://neatgarms.com",
+  "logo": "https://neatgarms.com/logo.png",
+  "description": "Neatgarms is a premium clothing brand delivering timeless style, modern comfort and authentic expression.",
+  "sameAs": [
+    "https://www.instagram.com/neatgarms"
+  ]
+}
+</script>
+
+
 </head>
 <body>
 
