--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
   id="bgVideo"
 >
   <source src="images/1.mp4" type="video/mp4">
+  <img src="images/lp12(main).webp" alt="Fallback image" />
 </video>
 
 
