--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   preload="auto"      
   id="bgVideo"
 >
-  <source src="images/1.mp4" type="video/mp4">
+  <source src="images/VID2.mp4" type="video/mp4">
 </video>
 
 
