--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
   loop
   playsinline
   webkit-playsinline   
-  preload="auto"      
+  preload="auto"   
+  poster="images/lp12(main).webp"   
   id="bgVideo"
 >
   <source src="images/vid222.mp4" type="video/mp4">
-
+  Your browser does not support the video tag.
 </video>
 
 
