--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="description"
       content="Discover Neatgarms — modern streetwear, everyday essentials and limited drops designed for confident self‑expression. Shipping worldwide from Kenya.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#ae866a">
   <title>Neatgarms</title>
   <link rel="stylesheet" href="styles.min.css" />
   <link rel="preload" as="video" href="images/1.mp4" type="video/mp4">
