--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="preload" as="video" href="images/1.mp4" type="video/mp4">
   <!-- Google Fonts -->
    <link rel="canonical" href="https://neatgarms.com/" />
+   <link rel="preload" as="image" href="images/logo2.png">
+
 
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Dream+Avenue&family=Poppins&display=swap" rel="stylesheet" />
 
@@ -133,7 +135,7 @@
 
   <script type="module" src="scripts.min.js" defer></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" defer></script>
 <script>
   AOS.init({
     duration: 1200, // Animation duration
