--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 <!-- Already‑Subscribed Message (hidden by default) -->
 <div id="alreadySubscribedMsg" class="popup-msg">
   <button class="close-btn" id="closeAlreadyBtn" aria-label="Close message">&times;</button>
-  <h2>Already in the Neat team</h2>
+  <h2>Confirmed: You’re Part of The Vision</h2>
 </div>
 
 
