--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
 
     <!-- Logo -->
     <div class="popup-logo">
-<img src="images/logo2.png"
+<img src="images/logo2.webp"
      alt="Neat Logo"
      fetchpriority="high"
-     width="100%" height="100%"
+     width="100" height="100"
      decoding="async">
     </div>
 
