--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ae866a">
   <title>Neatgarms</title>
-  <link rel="stylesheet" href="styles.min.css"/>
+
+<link rel="preload" as="style" href="styles.min.css" onload="this.rel='stylesheet'">
+
   <link rel="preload" as="video" href="images/1.mp4" type="video/mp4">
 
    <link rel="canonical" href="https://neatgarms.com/" />
-   <link rel="preload" as="image" href="images/logo2.png">
+   <link rel="preload" as="image" href="images/logo2.webp">
 <!-- Preconnect to Google Fonts domains -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -302,9 +304,10 @@
 <img src="images/logo2.webp"
      alt="Neat Logo"
      fetchpriority="high"
-     width="100" height="100"
+     width="600" height="570"
      decoding="async">
     </div>
+
 
     <h2>Snooze you lose</h2>
     <p>NEAT VIP</p>
